--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Signing Transaction Inputs\n",
+    "# Signing Transactions\n",
     "\n",
     "You need to modify the transaction before actually signing it. That is, you have to compute the `z` in a very particular way. The procedure is as follows.\n",
     "\n",
@@ -25,8 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "# Transaction Construction Example\n",
     "\n",
